# eac_eddy_env_control_chl

./: .gitignore  README.md  environment.yml  pyproject.toml
archive/matlab_legacy/: sat_chl_anom_v3_donut_original.m
config/: paths_template.yml
docs/: README_next_steps.md  file_inventory_raw.txt  workflow_map.md
scripts/matlab/: 01_download_modis_chl_and_calculate_loess.m  02_collocate_eddy_chl_donut.m  step01_download_modis_chl_and_calculate_loess.m  step02_collocate_eddy_chl_donut.m
scripts/python/: 01_load_inputs.py  02_prepare_background_fields.py  03_build_region_masks.py  04_build_climatologies.py
scripts/python/figures/: make_fig05_07_depth_climatology.py  make_fig08_lifecycle.py
src/matlab/utils/: Swath_OSU.m  nc2mat.m  smooth2d_loess.m
src/python/eac_eddy_chl/: __init__.py  background_fields.py  climatology.py  eddy_utils.py  grid_utils.py  io.py  regions.py  stats_utils.py  time_utils.py
